# src/dto/review.dto.ts
@@ -1,4 +1,9 @@
 import { GameDTO } from "./game.dto";
+import {ConsoleDTO} from "./console.dto";
 
 export interface ReviewDTO {
+    id?: number;
+    game?: GameDTO;
+    rating?: number;
+    reviewText?: string;
 }
